[package]
name = "hax-6rr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "glow",
    "wayland",
] }
num-derive = "0.4.2"
num-traits = "0.2.19"
prost = "0.12.6"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_ini = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"

[build-dependencies]
prost-build = "0.12.6"

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1
opt-level = "z"
